<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >

        <TableRow>
            <TextView
                android:text="@string/task_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
            </TextView>

            <TextView
                android:id="@+id/editedTaskName"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:ellipsize="end"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
            </TextView>
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorTitleFont" />

        <TableRow>
            <TextView
                android:text="@string/due_date"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editedDueDateTask"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorTitleFont" />

        <TableRow>

            <TextView
                android:text="@string/task_notes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <TextView
                android:id="@+id/editedTaskNotes"
                android:gravity="right"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorTitleFont" />

        <TableRow>

            <TextView
                android:text="@string/task_priority"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>


            <TextView
                android:id="@+id/editedTaskPriority"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="@color/colorTitleFont" />

        <TableRow>
            <TextView
                android:text="@string/task_status"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
            </TextView>

            <TextView
                android:id="@+id/editedTaskStatus"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">
            </TextView>

        </TableRow>
    </TableLayout>

</ScrollView>
